// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ifRevisionID > can apply revision constraint (inferred from document) 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "title": "@@ -6,5 +6,20 @@
 ard 
-3
+with a Vengeance
",
      },
      "id": "die-hard-iii",
      "ifRevisionID": "datrev",
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "rating": 4,
      },
    },
  },
]
`;

exports[`ifRevisionID > can apply revision constraint (uppercase) 1`] = `
[
  {
    "patch": {
      "diffMatchPatch": {
        "title": "@@ -6,5 +6,20 @@
 ard 
-3
+with a Vengeance
",
      },
      "id": "die-hard-iii",
      "ifRevisionID": "abc123",
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "rating": 4,
      },
    },
  },
]
`;
